deploy/apps/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: jarvis-system
  labels:
    app.kubernetes.io/name: frontend
spec:
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - port: 8080
      targetPort: 8080
